# signal-summarizer

./: .gitignore  CLAUDE.md  README.md  chat_venice_api.py  cluster.py  config.json.sample  group_summarizer.py  llm_util.py  ollama_client.py  pyproject.toml
.claude/: settings.local.json
examples/: sync-messages.sh  sync-messagges.sh
